# C-Image-Editor

./: CMakeLists.txt  main.cpp  sfbutton.cpp  sfbutton.h
